--- a/Readme/Readme.csproj
+++ b/Readme/Readme.csproj
@@ -227,6 +227,9 @@
     <Compile Include="..\Entitas\Entitas\EntitasCache.cs">
       <Link>Linked Libraries\Entitas\EntitasCache.cs</Link>
     </Compile>
+    <Compile Include="..\Entitas\Entitas\Interfaces\IEntity.cs">
+      <Link>Linked Libraries\Entitas\Interfaces\IEntity.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
