--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -343,6 +343,9 @@
     <Compile Include="Tests\Entitas\Fixtures\Systems\MultiReactiveSubSystemSpy.cs" />
     <Compile Include="Tests\Entitas\Fixtures\Systems\ReactiveSubSystemSpy.cs" />
     <Compile Include="Tests\Entitas\Fixtures\Systems\ReactiveSubSystemSpyBase.cs" />
+    <Compile Include="..\Entitas\Entitas\Interfaces\IEntity.cs">
+      <Link>Linked Libraries\Entitas\Interfaces\IEntity.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
