--- a/Entitas/Entitas.csproj
+++ b/Entitas/Entitas.csproj
@@ -94,6 +94,13 @@
     <Compile Include="Entitas\EntitasCache.cs" />
     <Compile Include="Entitas\Interfaces\IEntity.cs" />
     <Compile Include="Entitas\Interfaces\IPool.cs" />
+    <Compile Include="Entitas\Default\DefaultPool.cs" />
+    <Compile Include="Entitas\Default\DefaultMatcher.cs" />
+    <Compile Include="Entitas\Default\DefaultReactiveSystem.cs" />
+    <Compile Include="Entitas\Default\DefaultISetPool.cs" />
+    <Compile Include="Entitas\Default\DefaultGroup.cs" />
+    <Compile Include="Entitas\Default\DefaultTriggerOnEvent.cs" />
+    <Compile Include="Entitas\Default\DefaultGroupObserver.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -109,5 +116,6 @@
     <Folder Include="Entitas\CodeGenerator\Providers\" />
     <Folder Include="Entitas\Serialization\Blueprints\" />
     <Folder Include="Entitas\Serialization\Configuration\" />
+    <Folder Include="Entitas\Default\" />
   </ItemGroup>
 </Project>
